<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Titulo -->
    <TextView
        android:id="@+id/textViewTop2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Documentación respaldatoria de ausentismo"
        android:layout_marginTop="60dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    <!-- TextView en la parte superior -->
    <TextView
        android:id="@+id/textViewTop"
        android:layout_below="@+id/textViewTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="Aviso de ausentismo" />

    <!-- RadioGroup para los botones "Si" y "No" -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textViewTop"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- RadioButton "Si" -->
        <RadioButton
            android:id="@+id/radioButtonSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Si"
            android:checked="true" />

        <!-- RadioButton "No" -->
        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="No" />
    </RadioGroup>

    <!-- TextView debajo del RadioGroup -->
    <TextView
        android:id="@+id/textViewBottom"
        android:layout_below="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Subir documentación que respalde ausentismo"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <!-- Botón debajo del TextView -->
    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_background"
        android:text="Adjuntar archivos"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textViewTop1"
        android:layout_below="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aviso de tardanza"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#000000" />

    <!-- RadioGroup para los botones "Si" y "No" -->
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_below="@+id/textViewTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!-- RadioButton "Si" -->
        <RadioButton
            android:id="@+id/radioButtonSi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Si"
            android:checked="true" />

        <!-- RadioButton "No" -->
        <RadioButton
            android:id="@+id/radioButtonNo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="No" />
    </RadioGroup>

    <!-- EditText para el comentario -->
    <EditText
        android:id="@+id/commentEditText"
        android:layout_below="@+id/radioGroup1"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:hint="Ingrese el motivo de la tardanza"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        android:theme="@style/EditTextStyle"
        android:background="@drawable/edittext_border"/>

    <!-- Botón para enviar el comentario -->
    <Button
        android:id="@+id/sendButton"
        android:layout_below="@+id/commentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_background"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!-- Elemento 1 -->
        <ImageView
            android:id="@+id/navhome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon1"
            android:contentDescription="@string/nav_home" />

        <!-- Elemento 2 -->
        <ImageView
            android:id="@+id/navqr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon2"
            android:contentDescription="@string/nav_qr" />

        <!-- Elemento 3 -->
        <ImageView
            android:id="@+id/navprofile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon3"
            android:contentDescription="@string/nav_profile" />
    </LinearLayout>
</RelativeLayout>


